# invoice-renamer-standalone

./: .env.example  .gitignore  README.md  invoice-renamer-prompts.md  pyproject.toml  requirements.txt
src/invoice_renamer/: cli.py
